# altcoin-nexus

./: .env.example  .gitignore  ADMIN_PANEL.md  Dockerfile  FINAL_REPORT.md  README.md  alembic.ini  api.py  build-frontend.bat  build-frontend.ps1  dashboard_server.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run_local.py  start-frontend.bat  start-frontend.ps1
alembic/: env.py
alembic/versions/: 001_initial_schema.py
backtesting/: __init__.py  monte_carlo.py  run_90day_bt.py  run_simulation.py
config/: prometheus.yml  risk.yaml  strategy.yaml  system.yaml
core/: __init__.py
core/config/: __init__.py  manager.py  refresh.py  settings.py
core/db/: __init__.py  connection.py  models.py  repositories.py
core/events/: __init__.py  bus.py  types.py
docs/: FINAL_VERIFICATION_AUDIT.md  FULL_CODE_AUDIT.md  MULTI_EXCHANGE.md  SYSTEM_HEALTH_REPORT.md
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.vue  router.ts  style.css
ml/: __init__.py  model.py
scoring/: __init__.py
services/: __init__.py
services/admin/: __init__.py  (+2 more)
signals/: __init__.py  factors.py  ic_analyzer.py  regime.py  scorer.py
strategies/: __init__.py  arb_cross_exchange.py  base.py  long_oversold.py  macro_filter.py  momentum_scalp.py  prepump_sniffer.py  registry.py  short_overbought.py
tests/: conftest.py  test_backtest.py  test_config.py  test_execution.py  test_strategies.py  test_trade_manager.py
utils/: __init__.py  helpers.py  indicators.py
web/: __init__.py  app.py  auth.py
(+41 files in other folders)
