[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "altcoin-nexus"
version = "4.0.0"
description = "L4级自治量化交易系统 - 纯异步、事件驱动、自适应"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    # 核心异步框架
    "asyncio>=3.4.3",
    "aiohttp>=3.9.0",
    "websockets>=12.0",
    
    # 数据库
    "sqlalchemy[asyncio]>=2.0.23",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    
    # Redis
    "redis[hiredis]>=5.0.0",
    
    # Web框架
    "fastapi>=0.108.0",
    "uvicorn[standard]>=0.25.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # 交易所
    "ccxt>=4.2.0",
    
    # 数据处理
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    
    # 机器学习
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    
    # 监控
    "prometheus-client>=0.19.0",
    
    # 日志
    "structlog>=23.2.0",
    
    # 配置
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    
    # Telegram
    "python-telegram-bot>=20.7",
    
    # 工具
    "httpx>=0.25.0",
    "orjson>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
